<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_speakers">Speakers</string>
    <string name="description_job_author_avatar">Job author avatar</string>
    <string name="description_user">User avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_user_selected">User Selected</string>
    <string name="description_event_check_in_out">CheckIn CheckOut</string>
    <string name="description_play_audio">Play Audio</string>
    <string name="description_play_video">Play Video</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="add_job">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="get_posts">Posts</string>
    <string name="get_events">Events</string>
    <string name="get_jobs">Jobs</string>
    <string name="get_wall">Wall</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="empty_events">There are no events.\nIf you create a new event, it will appear here</string>
    <string name="error_loading">Error loading data</string>
    <string name="error_authenticating">Authentication Error</string>
    <string name="error_registering">Registration Error</string>
    <string name="error_password_confirmation">Passwords Do Not Match</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_broadcast_push">Broadcast push received</string>
    <string name="notification_personal_push">Personal push received</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="new_post">New Posts Available</string>
    <string name="new_event">New Events Available</string>
    <string name="new_job">New Jobs Available</string>
    <string name="remove">Remove</string>
    <string name="pick_speakers">Pick Speakers</string>
    <string name="removeAudio">Remove Audio</string>
    <string name="image_description">Image Description</string>
    <string name="singnout">Sign Out</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="auth_dialog_question">Are you sure you want to log out?</string>
    <string name="login_hint">Login hint</string>
    <string name="password_hint">Password hint</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_password_here">Enter password here</string>
    <string name="enter_password_confirmation">Enter password confirmation here</string>
    <string name="enter_login_here">Enter login here</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="name">Name</string>
    <string name="authenticate">Authenticate</string>
    <string name="android_resource">android.resource://ru.netology.nmedia/</string>
    <string name="enter_event_title_here">Enter event title here</string>
    <string name="enter_calendar_description_here">Calendar control</string>
    <string name="event_calenar_date">Set event calendar date</string>
    <string name="offline_event">Offline Event</string>
    <string name="online_event">Online Event</string>
    <string name="enter_event_description_here" translatable="false">Enter event description</string>
    <string name="enter_position_here">Enter position here</string>
    <string name="enter_link_here">Enter link here</string>
    <string name="enter_company_name_here">Enter company name here</string>
    <string name="enter_start_date">Start Date</string>
    <string name="enter_finish_date">Finish Date</string>
</resources>