<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PostEditFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_field_height_2"
                android:layout_marginBottom="@dimen/margin_small_bottom"
                android:textAlignment="center"
                android:hint="@string/enter_company_name_here"
                android:inputType="textCapWords"
                android:background="@android:color/transparent"/>

            <EditText
                android:id="@+id/position"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_field_height_2"
                android:layout_marginBottom="@dimen/margin_small_bottom"
                android:textAlignment="center"
                android:hint="@string/enter_position_here"
                android:inputType="textMultiLine"
                android:background="@android:color/transparent"/>

            <EditText
                android:id="@+id/link"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_field_height_2"
                android:layout_marginBottom="@dimen/margin_small_bottom"
                android:textAlignment="center"
                android:hint="@string/enter_link_here"
                android:inputType="textMultiLine"
                android:background="@android:color/transparent"/>

            <CalendarView
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_calendar_description_here"
                android:background="@android:color/transparent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dates"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_field_height_2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/start"
                    android:layout_width="0dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_height="@dimen/text_field_height_2"
                    android:layout_marginBottom="@dimen/margin_small_bottom"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/confirm"
                    app:layout_constraintTop_toTopOf="@id/dates"
                    android:hint="@string/enter_start_date"
                    android:background="@android:color/transparent"/>

                <ImageButton
                    android:id="@+id/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_field_height_2"
                    app:layout_constraintStart_toEndOf="@id/start"
                    app:layout_constraintEnd_toStartOf="@id/finish"
                    app:layout_constraintTop_toTopOf="@id/dates"
                    tools:srcCompat="@sample/posts.json/data/authorAvatar"/>

                <TextView
                    android:id="@+id/finish"
                    android:layout_width="0dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_height="@dimen/text_field_height_2"
                    android:layout_marginBottom="@dimen/margin_small_bottom"
                    app:layout_constraintStart_toEndOf="@id/confirm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/dates"
                    android:hint="@string/enter_finish_date"
                    android:background="@android:color/transparent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>