<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PostEditFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_field_height_2"
                android:layout_marginBottom="@dimen/margin_small_bottom"
                android:textAlignment="center"
                android:hint="@string/enter_event_title_here"
                android:inputType="textCapWords"/>

            <EditText
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_small_bottom"
                android:textAlignment="center"
                android:hint="@string/enter_event_description_here"
                android:inputType="textMultiLine"
                android:background="@android:color/transparent"/>

            <CalendarView
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_event_description_here"
                android:background="@android:color/transparent"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_offline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_spacing"
                    android:text="@string/offline_event"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radio_online"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_spacing"
                    android:text="@string/online_event"
                    android:layout_weight="1" />
            </RadioGroup>

            <Button
                android:id="@+id/pick_speakers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_speakers"
                android:layout_gravity="bottom|center_horizontal"/>

            <FrameLayout
                android:id="@+id/photo_preview_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="invisible">

                <ImageView
                    android:id="@+id/photo_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

                <Button
                    android:id="@+id/remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove"
                    android:layout_gravity="bottom|center_horizontal"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/audio_preview_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="invisible">

                <ImageView
                    android:id="@+id/audio_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

                <Button
                    android:id="@+id/removeAudio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove"
                    android:layout_gravity="bottom|center_horizontal"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/video_preview_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="invisible">

                <ImageView
                    android:id="@+id/video_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

                <Button
                    android:id="@+id/removeVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/remove" />
            </FrameLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomAppBar"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored">

        <ImageView
            android:id="@+id/pick_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="@dimen/icon_button_padding"
            android:src="@drawable/ic_photo_pick_add_24dp">
        </ImageView>

        <ImageView
            android:id="@+id/pick_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="@dimen/icon_button_padding"
            android:src="@drawable/ic_audio_add_24dp">
        </ImageView>

        <ImageView
            android:id="@+id/pick_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="@dimen/icon_button_padding"
            android:src="@drawable/ic_video_add_24dp">
        </ImageView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audio"
            android:id="@+id/audioTitle"
            android:textAlignment="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>