<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_spacing">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="@dimen/posts_avatar_size"
                    android:layout_height="@dimen/posts_avatar_size"
                    android:layout_marginBottom="@dimen/common_spacing"
                    android:contentDescription="@string/description_post_author_avatar"
                    app:layout_constraintBottom_toBottomOf="@id/header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@sample/posts.json/data/authorAvatar"/>

                <TextView
                    android:id="@+id/author"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_spacing"
                    android:layout_marginEnd="@dimen/common_spacing"
                    android:ellipsize="end"
                    android:singleLine="true"
                    app:layout_constraintBottom_toTopOf="@+id/published"
                    app:layout_constraintEnd_toStartOf="@id/menu"
                    app:layout_constraintStart_toEndOf="@id/avatar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@sample/posts.json/data/author"/>

                <TextView
                    android:id="@+id/published"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_spacing"
                    android:layout_marginEnd="@dimen/common_spacing"
                    android:layout_marginBottom="@dimen/common_spacing"
                    app:layout_constraintBottom_toBottomOf="@id/header"
                    app:layout_constraintEnd_toStartOf="@id/menu"
                    app:layout_constraintStart_toEndOf="@id/avatar"
                    app:layout_constraintTop_toBottomOf="@id/author"
                    tools:text="@sample/posts.json/data/published"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/common_spacing"
                    android:contentDescription="@string/description_post_menu"
                    app:icon="@drawable/ic_more_vert_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/Widget.AppTheme.IconButton"/>

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="avatar,published,menu"/>

                <TextView
                    android:id="@+id/content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingMultiplier="1.5"
                    android:paddingTop="@dimen/common_spacing"
                    android:paddingBottom="@dimen/common_spacing"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/header"
                    tools:text="@sample/posts.json/data/content"/>

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/common_spacing"
                    android:contentDescription="@string/image_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/content"
                    tools:srcCompat="@sample/posts.json/data/authorAvatar"/>

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/footer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="image"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/reactZone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/footer">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/like"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:contentDescription="@string/description_post_like"
                            app:icon="@drawable/ic_like_24dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/reactZone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            tools:checked="@sample/posts.json/data/likedByMe"
                            style="@style/Widget.AppTheme.LikeCheckBox"/>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/userSlots"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="@id/like"
                            app:layout_constraintStart_toEndOf="@id/like">

                                <ImageView
                                    android:id="@+id/user1"
                                    android:layout_width="@dimen/posts_avatar_size"
                                    android:layout_height="@dimen/posts_avatar_size"
                                    android:layout_marginBottom="@dimen/common_spacing"
                                    android:contentDescription="@string/description_post_author_avatar"
                                    app:layout_constraintStart_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="@id/like"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    tools:srcCompat="@sample/posts.json/data/authorAvatar"/>

                                <ImageView
                                    android:id="@+id/user2"
                                    android:layout_width="@dimen/posts_avatar_size"
                                    android:layout_height="@dimen/posts_avatar_size"
                                    android:layout_marginBottom="@dimen/common_spacing"
                                    android:contentDescription="@string/description_post_author_avatar"
                                    app:layout_constraintStart_toEndOf="@id/user1"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    tools:srcCompat="@sample/posts.json/data/authorAvatar"/>

                                <ImageView
                                    android:id="@+id/user3"
                                    android:layout_width="@dimen/posts_avatar_size"
                                    android:layout_height="@dimen/posts_avatar_size"
                                    android:layout_marginBottom="@dimen/common_spacing"
                                    android:contentDescription="@string/description_post_author_avatar"
                                    app:layout_constraintStart_toEndOf="@id/user2"
                                    app:layout_constraintTop_toTopOf="@id/like"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    tools:srcCompat="@sample/posts.json/data/authorAvatar"/>

                                <ImageView
                                    android:id="@+id/user4"
                                    android:layout_width="@dimen/posts_avatar_size"
                                    android:layout_height="@dimen/posts_avatar_size"
                                    android:layout_marginBottom="@dimen/common_spacing"
                                    android:contentDescription="@string/description_post_author_avatar"
                                    app:layout_constraintStart_toEndOf="@id/user3"
                                    app:layout_constraintTop_toTopOf="@id/like"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    tools:srcCompat="@sample/posts.json/data/authorAvatar"/>

                                <ImageView
                                    android:id="@+id/user5"
                                    android:layout_width="@dimen/posts_avatar_size"
                                    android:layout_height="@dimen/posts_avatar_size"
                                    android:layout_marginBottom="@dimen/common_spacing"
                                    android:contentDescription="@string/description_post_author_avatar"
                                    app:layout_constraintStart_toEndOf="@id/user4"
                                    app:layout_constraintTop_toTopOf="@id/like"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    tools:srcCompat="@sample/posts.json/data/authorAvatar"/>

                        </androidx.appcompat.widget.LinearLayoutCompat>



                </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
